Fixed the 500 status when creating profiles/portfolios with no profile picture, added size constraints to uploading images, fixed the styling of the portfolio on small screens, added a loader when getting the users location on the search screens, fixed the search result styling on smaller screens, fixed the 401 status for scheduled appointments.

--- a/Website/Css/Portfolio.css
+++ b/Website/Css/Portfolio.css
@@ -21,7 +21,7 @@
 
 .artist-portfolio-display {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     background-color: #000;
     padding: 10px;
@@ -46,7 +46,9 @@
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
-
+    .artist-portfolio-display {
+        flex-direction: row;
+    }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
